--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1599,3 +1599,51 @@ doi = {10.11591/ijece.v11i3.pp2315-2326}
     %url = {https://doi.org/10.1162/neco\_a\_01199},
     %eprint = {https://direct.mit.edu/neco/article-pdf/31/7/1235/1053200/neco\_a\_01199.pdf},
 }
+
+@article{wavelets1,
+author={Mateo, Carlos and Talavera, Juan Antonio},
+year={2020},
+title={Bridging the gap between the short-time Fourier transform (STFT), wavelets, the constant-Q transform and multi-resolution STFT},
+journal={Signal, Image and Video Processing},
+volume={14},
+pages={1535--1543},
+doi={10.1007/s11760-020-01701-8}
+}
+
+@inproceedings{wavelets2,
+author = {Tzanetakis, George and Essl, Georg and Cook, Perry},
+year = {2001},
+pages = {318--323},
+title = {Audio analysis using the discrete wavelet transform},
+journal = {Proceedings of the Conference in Acoustics and Music Theory Applications},
+}
+
+@article{gaborexpansion,
+journal={Signal Processing},
+pages={207--220},
+volume={21},
+number={3},
+year={1990},
+title={Discrete Gabor expansions},
+author={Wexler, J. and Raz, S.},
+doi={10.1016/0165-1684(90)90087-F}}
+
+@article{gaborwavelet1,
+journal={Journal of Mathematical Physics},
+year={2017},
+title={Gabor analysis as contraction of wavelets analysis},
+author={Eyal M. Subag and Ehud Moshe Baruch and Joseph L. Birman3 and Ady Mann},
+volume={58},
+number={8},
+doi={10.1063/1.4986620},
+}
+
+@article{gaborwavelet2,
+journal={Azerbaijan Journal of Mathematics},
+volume={4},
+number={1},
+author={Ole, Christensen},
+year={2014},
+title={A short introduction to frames, Gabor systems, and wavelet systems},
+url={https://backend.orbit.dtu.dk/ws/portalfiles/portal/105634286/A_Short_Introduction_to_Frames.pdf}
+}
